metadata/unpackaged/objects/Customer_Project__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Projects</relationshipLabel>
        <relationshipName>R00N50000001th4SEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_of_Play__c</fullName>
        <label>Field of Play</label>
        <picklist>
            <picklistValues>
                <fullName>Deep Well Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <label>Project Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>7500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Customer Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>